tests/build/widget_new/missing_value4.stderr
error: expected `;`
 --> $DIR/missing_value4.rs:8:9
  |
8 |         margin = 0;
  |         ^^^^^^

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/missing_value4.rs:8:9
   |
8  |         margin = 0;
   |         ^^^^^^- supplied 0 arguments
   |         |
   |         expected 1 argument
   |
note: associated function defined here
  --> $DIR/cursor_.rs:15:1
   |
15 | #[property(context, default(CursorIcon::Default))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
